# make_xconfig_qconf

./: CMakeLists.txt  CROSS_COMPILATION.md  Makefile  README.md  STATIC_BUILD_GUIDE.md  WINDOWS_BUILD_GUIDE.md  build-all-static.sh  build-all.sh  build-cmake-static.sh  build-cmake.sh  build-static-bundled.sh  build-windows-native.bat  build-windows-static.bat  build-windows-static.ps1  build-windows.ps1  build.cmd  build_windows.bat  confdata.c  expr.c  lkc.h  parser_stubs.c  qconf-static-bundled.pro  qconf-windows-fixed.pro  qconf-windows.pro  qconf.cc  qconf.moc  symbol.c  test_Kconfig  zconf.tab.c
.github/workflows/: build-qconf.yml
cmake/: mingw-w64-x86_64.cmake
scripts/: package-linux.sh  package-windows.sh
